# deepbreathe

./: .env.development  .gitignore  .pre-commit-config.yaml  README.md  buildozer.spec  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  ruff-lint.yml
apno/: apno.kv  app.py
apno/screens/: __init__.py  about_screen.py  co2_screen.py  free_screen.py  history_screen.py  home_screen.py  o2_screen.py  settings_screen.py
apno/utils/: __init__.py  database.py  icons.py
apno/widgets/: __init__.py  app_bar.py  icon.py  monthly_heatmap.py  nav_drawer.py  progress_circle.py  styled_button.py  styled_card.py
deepbreathe/: app.py  deepbreathe.kv
deepbreathe/screens/: __init__.py  about_screen.py  co2_screen.py  free_screen.py  home_screen.py  homescreen.kv  o2_screen.py  settings_screen.py
deepbreathe/utils/: __init__.py  database.py  icons.py
deepbreathe/widgets/: __init__.py  app_bar.py  custom_appbar.py  custom_button.py  custom_navdrawer.py  custombutton.kv  icon.py  nav_drawer.py  progress_circle.py  styled_button.py
scripts/: changelog.py  container-build.sh  version.py
