[project]
name = "deepbreathe"
version = "0.1.0"
description = "Apnea training app."
authors = [
  {name = "guillermodotn", email = "guillerm0.n@outlook.es"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kivy[base]>=2.3.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.1.0",
  "ruff>=0.9.1",
]

[project.scripts]
deepbreathe = "deepbreathe.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepbreathe"]

[tool.ruff]
target-version = "py312"
exclude = [
  ".venv",
  "build",
  "dist",
]
output-format = "grouped"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # Pycodestyle errors
  "F",  # Pyflakes (detects errors)
  "I",  # Isort (sorts imports)
  "W",  # Warnings
  "UP", # Pyupgrade (suggest Python upgrades)
  "N",  # Naming conventions
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = ["kivy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
